Fix duplicate function declarations - remove viewOrder from main.js, remove duplicate currentPrintOrderId

--- a/templates/orders.html
+++ b/templates/orders.html
@@ -1210,8 +1210,7 @@ function createOrder() {
     });
 }
 
-// Глобальная переменная для хранения ID заказа
-let currentPrintOrderId = null;
+// currentPrintOrderId объявлена в main.js
 
 // Функция "Взять в работу"
 function takeToWork(orderId) {
